fix(crdt-deaths-card): align values with asterisks

--- a/src/components/common/statistic.module.scss
+++ b/src/components/common/statistic.module.scss
@@ -6,6 +6,7 @@
 
 .value {
   text-align: right;
+  white-space: pre;
   @include type-size(200);
   font-weight: bold;
   line-height: 1;
